Skill levels in replace mode will only replace the specified unlock types